add form + import form to main app

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app">
+      <form-component></form-component>
       <ul v-for="postItem in postList">
         <card-post
           :title="postItem.title"
